--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/cli": "^20.3.10",
     "@angular/compiler-cli": "^20.3.11",
     "@types/jasmine": "~5.1.12",
+    "baseline-browser-mapping": "^2.9.19",
     "jasmine-core": "~5.12.1",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
