--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "test": "ng test"
   },
   "private": true,
+  "packageManager": "npm@9.9.4",
   "dependencies": {
-    "@angular/cdk": "^20.2.12",
-    "@angular/common": "^20.3.11",
-    "@angular/compiler": "^20.3.11",
-    "@angular/core": "^20.3.11",
-    "@angular/forms": "^20.3.11",
-    "@angular/material": "^20.2.12",
-    "@angular/platform-browser": "^20.3.11",
-    "@angular/platform-browser-dynamic": "^20.3.11",
-    "@angular/router": "^20.3.11",
+    "@angular/cdk": "^21.1.2",
+    "@angular/common": "^21.1.2",
+    "@angular/compiler": "^21.1.2",
+    "@angular/core": "^21.1.2",
+    "@angular/forms": "^21.1.2",
+    "@angular/material": "^21.1.2",
+    "@angular/platform-browser": "^21.1.2",
+    "@angular/platform-browser-dynamic": "^21.1.2",
+    "@angular/router": "^21.1.2",
     "@tailwindcss/postcss": "^4.1.17",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.2",
@@ -27,9 +28,9 @@
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^20.3.10",
-    "@angular/cli": "^20.3.10",
-    "@angular/compiler-cli": "^20.3.11",
+    "@angular-devkit/build-angular": "^21.1.2",
+    "@angular/cli": "^21.1.2",
+    "@angular/compiler-cli": "^21.1.2",
     "@types/jasmine": "~5.1.12",
     "baseline-browser-mapping": "^2.9.19",
     "jasmine-core": "~5.12.1",
