--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/cli": "^21.1.3",
     "@angular/compiler-cli": "^21.1.3",
     "@types/jasmine": "~6.0.0",
+    "angular-eslint": "^21.2.0",
     "baseline-browser-mapping": "^2.9.19",
     "jasmine-core": "~6.0.1",
     "karma": "~6.4.4",
